[package]
name = "sps30-i2c"
version = "0.1.0"
authors = ["David Gherghita <davidgherghita@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the SPS30 particulate matter sensor"
readme = "README.md"
keywords = ["particulate matter", "sensor", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/david-gherghita/sps30-i2c-rs"
documentation = "https://docs.rs/sps30-i2c"
edition = "2018"

[dependencies]
embedded-hal = "0.2.4"
byteorder = "1.3.4"

[dev-dependencies]
linux-embedded-hal = "0.3.0"
embedded-hal-mock = "0.7.2"
